# GrindPulse

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ANDROID_SYNC.md  BUILD_SUMMARY.md  CLAUDE.md  FIREBASE_SETUP.md  README.md  build_tracker.py  css_generator.py  data_parser.py  exceptions.py  html_generator.py  js_awareness_generator.py  js_config_sync_generator.py  js_conflict_dialog_generator.py  js_core_generator.py  js_firebase_generator.py  js_import_export_generator.py  js_settings_generator.py  js_shared_generator.py  js_sync_generator.py  package-lock.json  parsed_data.json  pyproject.toml  requirements.txt  tracker.html
.claude/: settings.json  settings.local.json
.claude/hooks/: agent_dispatch.py  process_list_hook.py  subagent_start.py  subagent_stop_community_finder.py  subagent_stop_state_advance.py  user_prompt_submit.py  (+1 more)
.github/: dependabot.yml
android/: settings.gradle.kts
dataconnect/: dataconnect.yaml  seed_data.gql
docs/: github-issues.md  roadmap.mmd
raw/: blind75.tsv  coreskills.tsv  neetcode150.tsv  neetcode250.tsv  neetcodeall.tsv  salesforce.tsv  uber.tsv
tests/: .gitignore  ARCHITECTURE.md  FILES_CREATED.md  INDEX.md  QUICK_REFERENCE.md  README.md  SETUP.md  TEST_DESIGN.md  TEST_SUMMARY.md  awareness.js  awareness.test.js  import-export.js  import-export.test.js  local-storage-load.js  local-storage-load.test.js  package-lock.json  package.json  random-selector.js  random-selector.test.js  sortable-columns.js  sortable-columns.test.js  storage-notify.js  storage-notify.test.js  urgent-review.js  urgent-review.test.js
(+142 files in other folders)
